; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf.c_pf_match_addr.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf.c_pf_match_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pf_addr = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pf_match_addr(i64 %0, %struct.pf_addr* %1, %struct.pf_addr* %2, %struct.pf_addr* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.pf_addr*, align 8
  %9 = alloca %struct.pf_addr*, align 8
  %10 = alloca %struct.pf_addr*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i64 %0, i64* %7, align 8
  store %struct.pf_addr* %1, %struct.pf_addr** %8, align 8
  store %struct.pf_addr* %2, %struct.pf_addr** %9, align 8
  store %struct.pf_addr* %3, %struct.pf_addr** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 0, i32* %12, align 4
  %13 = load i32, i32* %11, align 4
  switch i32 %13, label %14 [
  ]

14:                                               ; preds = %5
  %15 = load i32, i32* %12, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load i64, i64* %7, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %17
  store i32 0, i32* %6, align 4
  br label %27

21:                                               ; preds = %17
  store i32 1, i32* %6, align 4
  br label %27

22:                                               ; preds = %14
  %23 = load i64, i64* %7, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %22
  store i32 1, i32* %6, align 4
  br label %27

26:                                               ; preds = %22
  store i32 0, i32* %6, align 4
  br label %27

27:                                               ; preds = %26, %25, %21, %20
  %28 = load i32, i32* %6, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
